# tic-tac-toe

./: .gitignore  CMakeLists.txt  License.txt  Makefile  README.md  client  client.c  server  server.c
cmake/: FindThreads.cmake  Toolchain-mingw32.cmake
src/: CMakeLists.txt  client.c  server.c
